// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePolicy expect to render the Create Policy wizard 1`] = `
"[
	{
		"id": "eefdd47b-3c65-475a-bb42-cd7b78ecc935",
		"refId": "xccdf_org.ssgproject.content_benchmark_3",
		"latestSupportedOsMinorVersions": [
			"7"
		]
	}
]"
`;

exports[`CreatePolicy expect to render the Create Policy wizard 2`] = `
"{
	"osMajorVersions": {
		"edges": [
			{
				"node": {
					"osMajorVersion": "7",
					"profiles": [
						{
							"id": "bbc6c54d-3e6d-458c-9e85-ff62ed78246d",
							"refId": "xccdf_org.ssgproject.content_profile_1",
							"name": "Profile #1",
							"osMajorVersion": "7",
							"supportedOsVersions": [
								"7.7"
							],
							"benchmark": {
								"id": "0f5928da-7bee-4944-b3a5-418c32ec17f4",
								"refId": "xccdf_org.ssgproject.content_benchmark_1"
							},
							"rules": [
								{
									"refId": "xccdf_org.ssgproject.content_rule_1",
									"title": "Test Result Profile Rule #1",
									"compliant": true,
									"remediationAvailable": true,
									"severity": "unknown",
									"precedence": 1
								},
								{
									"refId": "xccdf_org.ssgproject.content_rule_2",
									"title": "Test Result Profile Rule #2",
									"compliant": true,
									"remediationAvailable": true,
									"severity": "high",
									"precedence": 2
								}
							]
						},
						{
							"id": "c68f96d2-526b-498e-95a3-7f7a6d34e576",
							"refId": "xccdf_org.ssgproject.content_profile_2",
							"name": "Profile #2",
							"osMajorVersion": "7",
							"supportedOsVersions": [
								"7.4",
								"7.7"
							],
							"benchmark": {
								"id": "b4a31e66-3aeb-4891-8fb6-93f540843f62",
								"refId": "xccdf_org.ssgproject.content_benchmark_2"
							},
							"rules": [
								{
									"refId": "xccdf_org.ssgproject.content_rule_3",
									"title": "Test Result Profile Rule #3",
									"compliant": true,
									"remediationAvailable": true,
									"severity": "medium",
									"precedence": 3
								},
								{
									"refId": "xccdf_org.ssgproject.content_rule_4",
									"title": "Test Result Profile Rule #4",
									"compliant": true,
									"remediationAvailable": true,
									"severity": "high",
									"precedence": 4
								}
							]
						}
					]
				}
			}
		]
	},
	"profiles": {
		"edges": [
			{
				"node": {
					"id": "bbc6c54d-3e6d-458c-9e85-ff62ed78246d",
					"refId": "xccdf_org.ssgproject.content_profile_1",
					"name": "Profile #1",
					"osMajorVersion": "7",
					"supportedOsVersions": [
						"7.7"
					],
					"benchmark": {
						"id": "0f5928da-7bee-4944-b3a5-418c32ec17f4",
						"refId": "xccdf_org.ssgproject.content_benchmark_1"
					},
					"rules": [
						{
							"refId": "xccdf_org.ssgproject.content_rule_1",
							"title": "Test Result Profile Rule #1",
							"compliant": true,
							"remediationAvailable": true,
							"severity": "unknown",
							"precedence": 1
						},
						{
							"refId": "xccdf_org.ssgproject.content_rule_2",
							"title": "Test Result Profile Rule #2",
							"compliant": true,
							"remediationAvailable": true,
							"severity": "high",
							"precedence": 2
						}
					]
				}
			}
		]
	}
}"
`;

exports[`CreatePolicy expect to render the Create Policy wizard 3`] = `"{}"`;

exports[`CreatePolicy expect to render the Create Policy wizard 4`] = `
"{
	"benchmarks": {
		"nodes": [
			{
				"id": "420f8ffa-f225-47d7-b4cc-2cd869d1e79f",
				"refId": "xccdf_org.ssgproject.content_benchmark_3",
				"latestSupportedOsMinorVersions": [
					"7"
				]
			}
		]
	}
}"
`;

exports[`CreatePolicy expect to render the Create Policy wizard 5`] = `
"{
	"benchmarks": {
		"nodes": [
			{
				"id": "420f8ffa-f225-47d7-b4cc-2cd869d1e79f"
			}
		]
	}
}"
`;

exports[`CreatePolicy expect to render the Create Policy wizard 6`] = `
"{
	"benchmarks": {
		"nodes": [
			{
				"id": "420f8ffa-f225-47d7-b4cc-2cd869d1e79f",
				"refId": "xccdf_org.ssgproject.content_benchmark_3",
				"latestSupportedOsMinorVersions": [
					"7"
				]
			}
		]
	}
}"
`;

exports[`CreatePolicy expect to render the Create Policy wizard 7`] = `
"{
	"profiles": {
		"edges": [
			{
				"node": {
					"id": "420f8ffa-f225-47d7-b4cc-2cd869d1e79f",
					"refId": "xccdf_org.ssgproject.content_benchmark_3",
					"latestSupportedOsMinorVersions": [
						"7"
					]
				}
			}
		]
	}
}"
`;

exports[`CreatePolicy expect to render the Create Policy wizard 8`] = `"{}"`;

exports[`CreatePolicy expect to render the Create Policy wizard 9`] = `
"{
	"benchmarks": {
		"nodes": [
			{
				"id": "617ae38c-a032-433c-910d-ecd6ec68ac75"
			}
		]
	}
}"
`;

exports[`CreatePolicy expect to render the Create Policy wizard 10`] = `
"{
	"benchmarks": {
		"nodes": [
			{
				"id": "617ae38c-a032-433c-910d-ecd6ec68ac75",
				"refId": "xccdf_org.ssgproject.content_benchmark_3",
				"version": "5.3.2",
				"latestSupportedOsMinorVersions": [
					"9"
				]
			}
		]
	}
}"
`;

exports[`CreatePolicy expect to render the Create Policy wizard 11`] = `"{}"`;
